--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HOST=localhost
+HOST=database-rst.cpwiig6c2upx.us-east-2.rds.amazonaws.com
 DATABASE=restApi
-USUARIO=root
+USUARIO=admin
 PASSWORD=Kero123456
